<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginTop="4dp"
	android:layout_marginBottom="4dp"
	android:layout_marginLeft="8dp"
	android:layout_marginRight="8dp">

	<zrock.application.engine.widget.ExpandableLayout
		android:id="@+id/expandable_layout"
		app:expWithParentScroll="true"
		android:layout_gravity="center"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<RelativeLayout
			android:id="@+id/firstLayer"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#6889ff">

			<ImageView
				android:layout_margin="5dp"
				android:id="@+id/summoner_iv"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:scaleType="fitXY"
				android:src="@mipmap/ezreal"/>

			<TextView
				android:id="@+id/summoner"
				android:layout_toRightOf="@+id/summoner_iv"
				android:layout_marginLeft="5dp"
				android:textColor="@android:color/white"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="18sp"
				android:text="@string/ngz_afterlife_title_1"/>

			<TextView
				android:id="@+id/label"
				android:layout_toRightOf="@+id/summoner_iv"
				android:layout_below="@+id/summoner"
				android:layout_marginTop="10dp"
				android:layout_marginLeft="5dp"
				android:layout_centerVertical="true"
				android:textColor="@android:color/white"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/ngz_afterlife_label_1"/>

		</RelativeLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/colorPrimary"
			android:padding="10dp"
			android:orientation="vertical">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@android:color/white"
				android:textSize="16sp"
				android:text="CREATED BY ASEPMO"/>

			<TextView
				android:textColor="@android:color/white"
				android:id="@+id/summoner_story_tv"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/ngz_afterlife_message_1"
				android:textSize="12sp"
				android:gravity="center"/>

		</LinearLayout>

	</zrock.application.engine.widget.ExpandableLayout>

</FrameLayout>

